RESOLVED FIXED 156187
jsc-layout-tests.yaml/js/script-tests/regress-141098.js failing on Yosemite Debug after r198989
https://bugs.webkit.org/show_bug.cgi?id=156187
Summary jsc-layout-tests.yaml/js/script-tests/regress-141098.js failing on Yosemite D...
Ryan Haddad
Reported 2016-04-04 16:27:43 PDT
jsc-layout-tests.yaml/js/script-tests/regress-141098.js failing after <https://trac.webkit.org/changeset/198989> <https://build.webkit.org/builders/Apple%20Yosemite%20Debug%20JSC%20%28Tests%29/builds/5485> ** The following JSC stress test failures have been introduced: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: Regression test for https://webkit.org/b/141098. Make sure eval() properly handles running out of stack space. This test should run without crashing. jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: PASS Exception: RangeError: Maximum call stack size exceeded. jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: Timed out after 339.000000 seconds! jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 1 0x10ce84410 WTFCrash jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 2 0x10bd5612e timeoutThreadMain(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 3 0x10cef0ab9 WTF::createThread(void (*)(void*), void*, char const*)::$_0::operator()() const jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 4 0x10cef0a8c std::__1::__function::__func<WTF::createThread(void (*)(void*), void*, char const*)::$_0, std::__1::allocator<WTF::createThread(void (*)(void*), void*, char const*)::$_0>, void ()>::operator()() jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 5 0x10c77cf1a std::__1::function<void ()>::operator()() const jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 6 0x10ceef7de WTF::threadEntryPoint(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 7 0x10cef1041 WTF::wtfThreadEntryPoint(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 8 0x7fff9bd3305a _pthread_body jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 9 0x7fff9bd32fd7 _pthread_body jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: 10 0x7fff9bd303ed thread_start jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: test_script_31075: line 2: 95529 Segmentation fault: 11 ( "$@" ../../../../.vm/JavaScriptCore.framework/Resources/jsc --useFTLJIT\=false --useFunctionDotArguments\=true --useConcurrentJIT\=false --thresholdForJITAfterWarmUp\=100 --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 --maximumEvalCacheableSourceLength\=150000 resources/standalone-pre.js regress-141098.js resources/standalone-post.js ) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit: ERROR: Unexpected exit code: 139 FAIL: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: Regression test for https://webkit.org/b/141098. Make sure eval() properly handles running out of stack space. This test should run without crashing. jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: PASS Exception: RangeError: Maximum call stack size exceeded. jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: Timed out after 339.000000 seconds! jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 1 0x102e8d410 WTFCrash jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 2 0x101d5f12e timeoutThreadMain(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 3 0x102ef9ab9 WTF::createThread(void (*)(void*), void*, char const*)::$_0::operator()() const jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 4 0x102ef9a8c std::__1::__function::__func<WTF::createThread(void (*)(void*), void*, char const*)::$_0, std::__1::allocator<WTF::createThread(void (*)(void*), void*, char const*)::$_0>, void ()>::operator()() jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 5 0x102785f1a std::__1::function<void ()>::operator()() const jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 6 0x102ef87de WTF::threadEntryPoint(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 7 0x102efa041 WTF::wtfThreadEntryPoint(void*) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 8 0x7fff9bd3305a _pthread_body jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 9 0x7fff9bd32fd7 _pthread_body jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: 10 0x7fff9bd303ed thread_start jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: test_script_31078: line 2: 95553 Segmentation fault: 11 ( "$@" ../../../../.vm/JavaScriptCore.framework/Resources/jsc --useFTLJIT\=false --useFunctionDotArguments\=true --testTheFTL\=true --useFTLJIT\=true --useConcurrentJIT\=false --thresholdForJITAfterWarmUp\=100 --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 --maximumEvalCacheableSourceLength\=150000 resources/standalone-pre.js regress-141098.js resources/standalone-post.js ) jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit: ERROR: Unexpected exit code: 139 FAIL: jsc-layout-tests.yaml/js/script-tests/regress-141098.js.layout-ftl-eager-no-cjit
Attachments
patch (1.28 KB, patch)
2016-04-05 11:42 PDT, Saam Barati
no flags
patch (2.25 KB, patch)
2016-04-06 17:51 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-04-04 16:30:17 PDT
I'll look into this
Ryan Haddad
Comment 2 2016-04-05 09:56:27 PDT
*** Bug 156239 has been marked as a duplicate of this bug. ***
Saam Barati
Comment 3 2016-04-05 11:42:38 PDT
Mark Lam
Comment 4 2016-04-05 11:43:52 PDT
Comment on attachment 275679 [details] patch LGTM too.
Saam Barati
Comment 5 2016-04-05 11:47:34 PDT
I'm going to try to test/repro locally first.
Saam Barati
Comment 6 2016-04-05 12:13:02 PDT
I can't repro locally. Let's land this speculatively and see if it fixes things.
WebKit Commit Bot
Comment 7 2016-04-05 13:05:06 PDT
Comment on attachment 275679 [details] patch Clearing flags on attachment: 275679 Committed r199070: <http://trac.webkit.org/changeset/199070>
WebKit Commit Bot
Comment 8 2016-04-05 13:05:10 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9 2016-04-06 09:27:04 PDT
r199070 does not appear to have resolved the issue, as the tests are still timing out: <https://build.webkit.org/builders/Apple%20Yosemite%20Debug%20JSC%20%28Tests%29/builds/5514>
Saam Barati
Comment 10 2016-04-06 17:51:21 PDT
Created attachment 275839 [details] patch attempt #2 at preventing the timeout. For the record, the timeout is purely because the test runs out of time on a busy machine. When giving the test infinite time to run, it takes about 4 minutes to finish.
Keith Miller
Comment 11 2016-04-06 17:52:21 PDT
Comment on attachment 275839 [details] patch r=me
WebKit Commit Bot
Comment 12 2016-04-06 18:50:14 PDT
Comment on attachment 275839 [details] patch Clearing flags on attachment: 275839 Committed r199135: <http://trac.webkit.org/changeset/199135>
WebKit Commit Bot
Comment 13 2016-04-06 18:50:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.