jsc-layout-tests.yaml/js/script-tests/regress-141098.js failing on Yosemite Debug after r198989 https://bugs.webkit.org/show_bug.cgi?id=156187

Reviewed by Filip Pizlo.

This is a speculative fix. Lets see if the prevents the timeout.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseStatementListItem):


Canonical link: https://commits.webkit.org/174343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199070 268f45cc-cd09-0410-ab3c-d52691b4dbfc